<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tomohamat.apicem.SwitchFragment">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/deviceDetailsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_device_details" />

    <EditText
        android:id="@+id/cliEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cli_runner_hint" />

    <Button
        android:id="@+id/cliRunnerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cli_runner" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/switchFragmentTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
