<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GeneralFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/requestUsersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_get_users"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />
    <!--
        <Button
            android:id="@+id/requestNetworkDevicesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_get_network_devices"
            tools:layout_editor_absoluteX="0dp" />
    -->
    <Button
        android:id="@+id/requestHostsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_get_hosts"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/requestLegitReadsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_get_legit_reads"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/generalFragmentView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
